--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -15,10 +15,11 @@ google-generativeai==0.3.2
 # Future Google Places API
 googlemaps==4.10.0  # Uncomment when implementing Places API
 
-Development dependencies (optional)
+# Development dependencies (optional)
 black==23.11.0
 flake8==6.1.0
 
+# Extra utilities
 beautifulsoup4==4.12.2
 lxml==4.9.3
-dnspython==2.4.2  # Optional: for email domain verificationblack==23.11.0
+dnspython==2.4.2  # Optional: for email domain verification
