--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,25 +1,25 @@
 # Core FastAPI and server dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+python-multipart==0.0.12
+pydantic-settings==2.6.0
+python-dotenv==1.0.1
 
 # Image processing dependencies
 pdf2image==1.17.0
-Pillow==10.4.0
+Pillow==11.0.0
 
-# Google AI dependencies  
-google-generativeai==0.3.2
+# Google AI dependencies
+google-generativeai==0.8.3
 
-# Future Google Places API
-googlemaps==4.10.0  # Uncomment when implementing Places API
+# Google Places API
+googlemaps==4.10.0
 
-# Development dependencies (optional)
-black==23.11.0
-flake8==6.1.0
+# Development dependencies
+black==24.10.0
+flake8==7.1.1
 
 # Extra utilities
-beautifulsoup4==4.12.2
-lxml==4.9.3
-dnspython==2.4.2  # Optional: for email domain verification
+beautifulsoup4==4.12.3
+lxml==5.3.0
+dnspython==2.7.0
