--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,6 +8,7 @@ python-dotenv==1.0.1
 # Image processing dependencies
 pdf2image==1.17.0
 Pillow==11.0.0
+opencv-python-headless==4.12.0.88
 
 # Google AI dependencies
 google-generativeai==0.8.3
@@ -15,15 +16,15 @@ google-generativeai==0.8.3
 # Google Places API
 googlemaps==4.10.0
 
-# Development dependencies
-black==24.10.0
-flake8==7.1.1
+# Machine learning
+scikit-learn==1.5.2
 
 # Extra utilities
 beautifulsoup4==4.12.3
 lxml==5.3.0
 dnspython==2.7.0
+aiohttp==3.10.10
 
-aiohttp
-
-scikit-learn
+# Development dependencies
+black==24.10.0
+flake8==7.1.1
